--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,13 @@ body {
 img.logo {
   float: right;
   height: 75px;
-  padding-top: 25px;
-  padding-right: 50px;
+  padding: 20px;
 }
 
 img.headshots {
-  height: 500px;
   float: left;
-  margin-left: 15%;
+  height: 500px;
+  margin: 10px;
   padding: 30px;
 }
 
