--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,24 @@ body {
   background-image: url(images/background.jpg);
 }
 
-img.logo {
+.sidenav {
+  width: 30%;
   float: right;
-  height: 75px;
-  padding: 20px;
+  height: 500px;
+  padding: 5px;
+  background-color: lightyellow;
+  border-style: double;
+}
+
+.logo {
+  height: 50px;
+  margin: 15px;  
 }
 
 img.headshots {
   float: left;
   height: 500px;
-  margin: 10px;
-  padding: 30px;
+  border-style: double;
 }
 
 li {
@@ -21,11 +28,12 @@ li {
   font-size: 15pt;
 }
 
-.footer {
-  float: right;
-  padding: 15px;
+.tours {
+  column-count: 1;
+  float: left;
   line-height: 1.5;
-  font-family: monospace;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-decoration: underline;
 }
 
 .links {
@@ -37,4 +45,16 @@ li {
 
 a {
   color: black;
+}
+
+.gif {
+  height: 50px;
+  width: 50px;
+  float: right;
+}
+
+.gif1 {
+  float: left;
+  height: 50px;
+  width: 50px;
 }
