--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ li {
   column-count: 1;
   float: left;
   line-height: 1.5;
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   text-decoration: underline;
 }
 
